<resources>
    <string name="app_name">Cartones de bingo</string>
    <string name="bingo">Bingo</string>
    <string name="speed">Velocidad</string>
    <string name="selected_this_cards">Elige los cartones que más te guste</string>
    <string name="go_out_app">Presiona de nuevo para salir</string>

    //Dialog
    <string name="do_you_want_play_again">¿Quieres empezar una nueva partida?</string>
    <string name="do_you_want_more_cards">¿Quieres más cartones?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    //Tutorial
    <string name="tutorial_if_you_want_more_cards">Si quieres más cartones pulsa aquí</string>
    <string name="tutorial_if_you_want_changer_speed">Controla la velocidad con la que sale los números pulsando el + y el -</string>
    <string name="tutorial_if_you_want_new_play">Para empezar nueva partida pulsa aquí</string>
    <string name="tutorial_if_you_want_to_start">Para empezar pulsa aquí</string>
    <string name="tutorial_check_number">Comprueba los números que han salido</string>

    //dialog rete
    <string name="dialog_rate_do_you_like_this_app">¿Te gusta la App?</string>
    <string name="dialog_rate_right_now">¡¡Votanos!!</string>
    <string name="dialog_rate_rate_this_app">Votar</string>
    <string name="dialog_rate_cancel">Cancelar</string>
    <string name="dialog_rate_thank_you">Gracias por votar</string>

    <string name="main_share">Descarga esta app %1$s y juega conmigo al Bingo</string>
    <string name="selection_90">Jugar al bingo 90</string>
    <string name="selection_75">Jugar al bingo 75</string>
    <string name="selection_tutorial">Ver tutorial</string>

    <string name="cards_bingo_you_cant_have_more_7">No puedes tener más de 7 cartones</string>
    <string name="cards_bingo_you_cant_have_more_6">No puedes tener más de 6 cartones</string>

</resources>